[workspace]
members = ["impl", "tests/no-std"]

[workspace.package]
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/thiserror"
rust-version = "1.93.0"

[workspace.dependencies]
thiserror = { path = ".", default-features = false }
thiserror-impl = { path = "impl", version = "=2.0.18" }
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = "2.0.115"
anyhow = { git = "https://github.com/earthlings-dev/anyhow.git" }
ref-cast = "1.0.25"
rustversion = "1.0.22"
trybuild = { version = "1.0.116", features = ["diff"] }

[package]
name = "thiserror"
version = "2.0.18"
authors.workspace = true
categories = ["rust-patterns", "no-std"]
description = "derive(Error)"
documentation = "https://docs.rs/thiserror"
edition.workspace = true
keywords = ["error", "error-handling", "derive"]
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["std"]

# Std feature enables support for formatting std::path::{Path, PathBuf}
# conveniently in an error message.
#
#     #[derive(Error, Debug)]
#     #[error("failed to create configuration file {path}")]
#     pub struct MyError {
#         pub path: PathBuf,
#         pub source: std::io::Error,
#     }
#
# Without std, this would need to be written #[error("... {}", path.display())].
std = []

[dependencies]
thiserror-impl = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
ref-cast = { workspace = true }
rustversion = { workspace = true }
trybuild = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]
